--- a/TODO
+++ b/TODO
@@ -9,9 +9,9 @@ Todo:
   ✔ Remove utils we do not need @done(24-10-15 10:36)
   ✔ Improve stop behaviour to become non-blocking @done(24-10-15 11:00)
   ✔ Fix crash after restarting download @done(24-10-15 11:00)
+  ✔ Remove vertical line from input bar @done(24-10-15 11:58)
   ☐ Establish if it works as intended, and if not, what songs are skipped
   ☐ Move color and other settings to different files
-  ☐ Remove vertical line from input bar
   ☐ Set methods as private
   ☐ Add logging to package
   ☐ Stop removal of directory from package
